# adkx

./: .env.example  .gitignore  LICENSE  README.md  preset.py  preset_server.py  pyproject.toml
docs/: concept.md  ingestigation.md  promote_sub_agent.md  web_ui_start_flow.md
preset_server/: __init__.py  __main__.py  cli.py  config.py  middleware.py  processors.py  promote.py
src/adkx/: __init__.py  __main__.py  cli.py  middleware.py  processors.py  promote.py
test_query/: agent.py
test_state/: agent.py
test_sub_agent/: agent.py
tests/: config.py  test_initial_state.py  test_promote_agents.py
tests/expose_agents/a1_simple_agent/: preset.yaml
tests/expose_agents/a3_another_file/: agent.py  preset.yaml
tests/expose_agents/a4_another_folder/: preset.yaml
tests/initial_state/a1_simple_state/: agent.py  preset.yaml
tests/initial_state/a2_schema_state/: agent.py  preset.yaml
tests/promote_agents/a1_simple_agent/: agent.py  preset.yaml
tests/promote_agents/a2_with_tools/: agent.py  preset.yaml  tools.py
tests/promote_agents/a3_another_file/: preset.yaml  sub_agent.py
tests/promote_agents/a4_another_folder/: agent.py  preset.yaml
tests/promote_agents/a5_multiple_agent/: cat_agent.py  preset.yaml
tests/promote_agents/a5_multiple_agent/sub_agents/: dog_agent.py
