[project]
name = "gemini-3-in-agent-engine"
version = "0.1.0"
description = "Deploy ADK agents with Gemini 3 to Agent Engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.27.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.141.0",
    "google-genai>=1.67.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
